src/generator/snapshots/bevy_state_plugin_generator__generator__tests__generate_plugin_source@fruits.txt.snap
---
source: src/generator/tests.rs
expression: "format_source(generate_plugin_source(root_node, Default::default()))"
---
#![allow(missing_docs)]
use bevy::prelude::AppExtStates;
pub mod states {
    use bevy::prelude::StateSet;
    #[derive(bevy::prelude::States, Hash, Default, Debug, Clone, PartialEq, Eq)]
    pub enum GameState {
        #[default]
        Loading,
          Ready
    }

    #[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
    #[source(Game = Game::Loading)]
    pub struct GameLoading;

    #[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
    #[source(Game = Game::Ready)]
    pub enum GameReady {
        #[default]
        Menu,
          Game
    }

    #[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
    #[source(GameReady = GameReady::Menu)]
    pub enum GameReadyMenu {
        #[default]
        Main,
          Options
    }

    #[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
    #[source(GameReadyMenu = GameReadyMenu::Main)]
    pub struct GameReadyGameReadyMenuMain;

    #[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
    #[source(GameReadyMenu = GameReadyMenu::Options)]
    pub struct GameReadyGameReadyMenuOptions;

    #[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
    #[source(GameReady = GameReady::Game)]
    pub enum GameReadyGame {
        #[default]
        Playing,
          Paused,
          GameOver
    }

    #[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
    #[source(GameReadyGame = GameReadyGame::Playing)]
    pub struct GameReadyGameReadyGamePlaying;

    #[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
    #[source(GameReadyGame = GameReadyGame::Paused)]
    pub struct GameReadyGameReadyGamePaused;

    #[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
    #[source(GameReadyGame = GameReadyGame::GameOver)]
    pub struct GameReadyGameReadyGameOver;
}
pub struct GeneratedStatesPlugin;
impl bevy::app::Plugin for GeneratedStatesPlugin {
    fn build(&self, app: &mut bevy::app::App) {
        app.init_state::<states::GameState>()
            .add_sub_state::<states::GameLoading>()
            .add_sub_state::<states::GameReady>()
            .add_sub_state::<states::GameReadyMenu>()
            .add_sub_state::<states::GameReadyGameReadyMenuMain>()
            .add_sub_state::<states::GameReadyGameReadyMenuOptions>()
            .add_sub_state::<states::GameReadyGame>()
            .add_sub_state::<states::GameReadyGameReadyGamePlaying>()
            .add_sub_state::<states::GameReadyGameReadyGamePaused>()
            .add_sub_state::<states::GameReadyGameReadyGameOver>()
        ;
    }
}
