src/generator/snapshots/bevy_state_plugin_generator__generator__tests__snapshot2@snapshot2_rustfmt.snap
---
source: src/generator/tests.rs
expression: "generate_all_type_definitions(&StateNode::enumeration(\"Alpha\",\n[StateNode::singleton(\"Beta\")]),\n(ParentState { name: \"GameState\".to_string(), variant: \"Alpha\".to_string() },\nNamingScheme::Full).into())"
---
#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(GameState = GameState::Alpha)]
pub enum GameStateAlpha {
    #[default]
    Beta
}

#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(GameStateAlpha = GameStateAlpha::Beta)]
pub struct GameStateAlphaBeta;
