src/generator/snapshots/bevy_state_plugin_generator__generator__tests__snapshot4@snapshot4.snap
---
source: src/generator/tests.rs
expression: "generate_all_type_definitions(&StateNode::list(\"List\",\n[StateNode::singleton(\"Item1\"),\nStateNode::enumeration(\"Item2\",\n[StateNode::singleton(\"A\"), StateNode::singleton(\"B\"),]),\nStateNode::singleton(\"Item3\"),]),\n(ParentState::new(\"GameState\", \"Alpha\", None), NamingScheme::Full).into())"
---
#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(Game = Game::Alpha)]
pub struct GameList;

#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(Game = Game::Alpha)]
pub struct GameItem1;

#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(Game = Game::Alpha)]
pub enum GameItem2 {
    #[default]
    A,
      B
}

#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(GameItem2 = GameItem2::A)]
pub struct GameItem2A;

#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(GameItem2 = GameItem2::B)]
pub struct GameItem2B;

#[derive(bevy::prelude::SubStates, Hash, Default, Debug, Clone, PartialEq, Eq)]
#[source(Game = Game::Alpha)]
pub struct GameItem3;
